# vs_2_cmake

./: CMakeLists.txt
inc/: print.h
src/: main.cpp  print.cpp
